tdf#144242 no width-height swap for line and pathline

MS Office swaps width and height for rotation angle ranges 45..135 and
225..315. Line and Pathline objects incorporate the rotation into their
points, so have no rotation. Line and open Pathline objects nevertheless
report an rotation angle. That one is used to align the text direction
to the line. But because of this reported angle, width and height were
swapped. The patch excludes these objects explicitly.

The case differentiation for the rotation range had forgotten to
normalize the angle. Therefore, in a reopened spreadsheet, the line was
accidentally exported correctly without width-height swap, because in
this case the rotation angle is negative.

Change-Id: I5f698d1cc734e17bcb02ff77db5224a228392e06